--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     .container span{
       position: relative;
     }
-    .container::before,
+    .container span::before,
     .container span::after{
       content: '';
       position: absolute;
