--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         border-width: 1.5em;
       }
     }
-    @keyframes animation-border-color
+    @keyframes animate-border-color
     {
       0%,25%{
         border-color: tomato;
@@ -72,7 +72,7 @@
         border-color: black;
       }
     }
-    @keyframes animation-scale
+    @keyframes animate-scale
     {
       from{
         width: 1%;
